-> Per #1937, numerous 503 fixes

--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -82,7 +82,7 @@
                                     </a>
                                 </div>
                                 <div id="{{ program.id }}-collapse-{{ attr.name }}" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel"
-                                     aria-labelledby="heading-{{ attr.name }}" data-feature-name="{{ attr.name }}" data-feature-displ-name="{{ attr.displ_name }}"
+                                     aria-labelledby="{{ program.id }}-heading-{{ attr.name }}" data-feature-name="{{ attr.name }}" data-feature-displ-name="{{ attr.displ_name }}"
                                      data-feature-type="datatype" data-feature-id="data_type">
                                     <ul class="search-checkbox-list" id="{{ program.id }}-{{ attr.name }}">
                                         {% if data_type_counts|list_contains_name:attr.name %}
@@ -120,16 +120,16 @@
                                 </a>
                             </div>
                             <div id="p-{{ program.id }}-collapse-gene-mutation-status" class="list-group-item__body collapse cohort-feature-select-block" role="tabpanel"
-                                 aria-labelledby="heading-gene-mutation-status" data-feature-name="gene-mutation-status" data-feature-displ-name="Gene Mutation Status" data-feature-type="molecular">
+                                 aria-labelledby="p-{{ program.id }}-heading-gene-mutation-status" data-feature-name="gene-mutation-status" data-feature-displ-name="Gene Mutation Status" data-feature-type="molecular">
                                 <ul class="list">
                                     <li class="list-item">
                                         <!-- gene selector -->
                                         <div class="list-item__heading" role="tab" id="p-{{ program.id }}-heading-sel-gene">
                                                 Gene
                                         </div>
-                                        <div id="p-{{ program.id }}-sel-gene" class="list-group-item__body sel-gene" role="tabpanel" aria-labelledby="heading-sel-gene">
+                                        <div id="p-{{ program.id }}-sel-gene" class="list-group-item__body sel-gene" role="tabpanel" aria-labelledby="p-{{ program.id }}-heading-sel-gene">
                                             <div id="p-{{ program.id }}-tokenfield-holder">
-                                                <textarea name="genes-list" class="form-control tokenfield paste-in-genes" id="p-{{ program.id }}-paste-in-genes" placeholder="Enter a gene's name" required></textarea>
+                                                <textarea name="genes-list" class="form-control tokenfield paste-in-genes" id="p-{{ program.id }}-paste-in-genes" aria-labelledby="p-{{ program.id }}-heading-sel-gene" placeholder="Enter a gene's name" required></textarea>
                                             </div>
                                             <div class="tokenfield">
                                                 <p class="helper-text__invalid" style="display: none;"><i class="fa fa-exclamation-circle"></i> The following <span class="token invalid">items</span>were not recognized as gene identifiers. You may either correct or delete these items -- or use them as-is.</p>
@@ -142,9 +142,9 @@
                                                 Mutation Type Categories
                                         </div>
                                         <div id="p-{{ program.id }}-sel-molecular-attr-cat" class="list-group-item__body cohort-feature-select-block" role="tabpanel"
-                                             aria-labelledby="heading-sel-molecular-attr-cat" data-feature-displ-name="Mutation Category" data-feature-id="category"
+                                             aria-labelledby="p-{{ program.id }}-heading-sel-molecular-attr-cat" data-feature-displ-name="Mutation Category" data-feature-id="category"
                                              data-feature-name="mutation-category" data-feature-type="molecular">
-                                            <select id="p-{{ program.id }}-mutation-category" class="mutation-category-selector form-control spec-select datatype-selector">
+                                            <select id="p-{{ program.id }}-mutation-category" class="mutation-category-selector form-control spec-select datatype-selector" aria-labelledby="p-{{ program.id }}-heading-sel-molecular-attr-cat">
                                                 <option value="no-gene" selected disabled>-- Select a Gene to Enable --</option>
                                                 <option value="label" disabled>-- Select a Category --</option>
                                                 <option value="any" data-value-displ-name="Any" data-value-name="Any" data-value-id="any">Any</option>
@@ -163,7 +163,7 @@
                                         </div>
                                         <span class="heading-note" id="p-{{ program.id }}-spec-mol-attr-heading-note">Choose the 'Individual Selection' category to enable</span>
                                         <div id="p-{{ program.id }}-spec-molecular-attrs" class="list-group-item__body cohort-feature-select-block spec-molecular-attrs" role="tabpanel"
-                                             aria-labelledby="heading-spec-molecular-attrs" data-feature-displ-name="Specific Mutation Type" data-feature-name="specific-mutation"
+                                             aria-labelledby="p-{{ program.id }}-heading-spec-molecular-attrs" data-feature-displ-name="Specific Mutation Type" data-feature-name="specific-mutation"
                                              data-feature-id="specific" data-feature-type="molecular">
                                             <ul class="search-checkbox-list" id="p-{{ program.id }}-{{ attr.value }}">
                                                 {% for attr in molecular_attr.attrs %}
