--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -459,3 +459,10 @@
 #cohort-apply-to-workbook
     .btn
         margin-right: 10px
+
+.bq-name
+    text-overflow: ellipsis
+    overflow: hidden
+.bq-label
+    padding-left: 0px
+    margin: 10px 0 0 0
