--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -59,8 +59,12 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div id="url-len-max-alert" class="alert alert-warning alert-dismissable" style="display: none;">
-                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     You have selected too many filters. The current counts shown will not be accurate until one or more filter options are removed.
+                </div>
+                <div id="at-least-one-filter-alert" class="alert alert-warning alert-dismissable" style="display: none;">
+                    <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    You must choose at least one filter to include samples in your cohort.
                 </div>
             </div>
         </div>
@@ -112,13 +116,17 @@
                 {% endif %}
                     <div class="modal-body">
                         <div id="multi-prog-cohort-create-warn" class="alert alert-warning alert-dismissable" style="display: none;">
-                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                             Your cohort contains samples from multiple programs. Please note that filters will only apply to samples from the program indicated
                             by the tab they were chosen on - they will not apply to samples from other programs in this cohort.
                         </div>
                         <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable" style="display: none;">
-                            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                             Your cohort's name contains invalid characters (<span class="unallowed-chars"></span>). Please choose another name.
+                        </div>
+                        <div id="at-least-one-filter-alert-modal" class="alert alert-warning alert-dismissable" style="display: none;">
+                            <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                            You must choose at least one filter to include samples in your cohort.
                         </div>
                         <div class="form-group">
                             <label for="cohort-name">Name:</label>
