-> Added a note specifying that IGV views must be for a single build -> Added build label to token

--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -72,6 +72,7 @@
                 <div class="panel-heading">
                     <input type="submit" form ="view-igv" value="Launch IGV" class="btn btn-primary pull-right" style="display: none;"/>
                     <h4>Selected Files</h4>
+                    <p><i>Note: Files viewed in IGV must all be for the same build.</i></p>
                 </div>
                 <div class="panel-body file-list">
                     <div id="file-max-alert" class="alert alert-warning alert-dismissable">
