--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -67,14 +67,14 @@
              <div class="panel form-group panel-default">
                 {% if existing_variable_list %}
                     <div class="panel-heading">
-                        <label for="variable-name" class="panel-title">Name of Favorite (Required)</label>
+                        <label for="variable_list_name_input" class="panel-title">Name of Favorite (Required)</label>
                     </div>
                     <div class="panel-body">
                         <input type="text" id="variable_list_name_input" placeholder="My new favorite variable" class="form-control" value="{{ existing_variable_list.name }}" required>
                     </div>
                 {% else %}
                     <div class="panel-heading">
-                        <label for="variable-name" class="panel-title">Name of Favorite (Required)</label>
+                        <label for="variable_list_name_input" class="panel-title">Name of Favorite (Required)</label>
                     </div>
                     <div class="panel-body">
                         <input type="text" id="variable_list_name_input" placeholder="My new favorite variable" class="form-control" value="" required>
@@ -122,7 +122,7 @@
                                                         <li class="list-group-item checkbox">
                                                             <div id="heading-{{ attr.name }}" class="list-group-item__heading">
                                                                 <label>
-                                                                    <input class="variable-toggle-checkbox" value="{{ attr.name }}" data-code="{{ attr.data_code }}" type="checkbox" var_type="{{ attr.type }}" name="elements-selected" data-text-label="{{ attr.displ_name }}">
+                                                                    <input aria-label="Feature Search" class="variable-toggle-checkbox" value="{{ attr.name }}" data-code="{{ attr.data_code }}" type="checkbox" var_type="{{ attr.type }}" name="elements-selected" data-text-label="{{ attr.displ_name }}">
                                                                     {{ attr.displ_name }}
                                                                 </label>
                                                             </div>
@@ -165,20 +165,20 @@
                                                                                     {% if forloop.counter0 < 6 %}
                                                                                         <li class="checkbox">
                                                                                             <label>
-                                                                                                <input class="variable-toggle-checkbox" type="checkbox" name="elements-selected" var_type="{% if variable.is_numeric %}N{% else %}C{% endif %}" value="{% if variable.shared_map_id %}{{ variable.shared_map_id }}{% else %}USER:{{ project.id }}:{{ variable.id }}{% endif %}" data-text-label="{{ project.name }}: {{ variable.feature_name|get_readable_name }}" data-feature-id="{{ variable.id }}" > {{ variable.feature_name|get_readable_name }}
+                                                                                                <input aria-label="{{ variable.feature_name|get_readable_name }}" class="variable-toggle-checkbox" type="checkbox" name="elements-selected" var_type="{% if variable.is_numeric %}N{% else %}C{% endif %}" value="{% if variable.shared_map_id %}{{ variable.shared_map_id }}{% else %}USER:{{ project.id }}:{{ variable.id }}{% endif %}" data-text-label="{{ project.name }}: {{ variable.feature_name|get_readable_name }}" data-feature-id="{{ variable.id }}" > {{ variable.feature_name|get_readable_name }}
                                                                                             </label>
                                                                                         </li>
                                                                                     {% elif forloop.counter0 == 6 and num_more > 0 %}
                                                                                         <a class="show-more">{{ num_more }} more</a>
                                                                                         <li class="extra-values checkbox" style="display:none;">
                                                                                             <label>
-                                                                                                <input class="variable-toggle-checkbox" type="checkbox" name="elements-selected" var_type="{% if variable.is_numeric %}N{% else %}C{% endif %}" value="{% if variable.shared_map_id %}{{ variable.shared_map_id }}{% else %}USER:{{ project.id }}:{{ variable.id }}{% endif %}" data-text-label="{{ project.name }}: {{ variable.feature_name|get_readable_name }}" data-feature-id="{{ variable.id }}" > {{ variable.feature_name|get_readable_name }}
+                                                                                                <input aria-label="{{ variable.feature_name|get_readable_name }}" class="variable-toggle-checkbox" type="checkbox" name="elements-selected" var_type="{% if variable.is_numeric %}N{% else %}C{% endif %}" value="{% if variable.shared_map_id %}{{ variable.shared_map_id }}{% else %}USER:{{ project.id }}:{{ variable.id }}{% endif %}" data-text-label="{{ project.name }}: {{ variable.feature_name|get_readable_name }}" data-feature-id="{{ variable.id }}" > {{ variable.feature_name|get_readable_name }}
                                                                                             </label>
                                                                                         </li>
                                                                                     {% else %}
                                                                                         <li class="extra-values checkbox" style="display:none;">
                                                                                             <label>
-                                                                                                <input class="variable-toggle-checkbox" type="checkbox" name="elements-selected" var_type="{% if variable.is_numeric %}N{% else %}C{% endif %}" value="{% if variable.shared_map_id %}{{ variable.shared_map_id }}{% else %}USER:{{ project.id }}:{{ variable.id }}{% endif %}" data-text-label="{{ project.name }}: {{ variable.feature_name|get_readable_name }}" data-feature-id="{{ variable.id }}" > {{ variable.feature_name|get_readable_name }}
+                                                                                                <input aria-label="{{ variable.feature_name|get_readable_name }}" class="variable-toggle-checkbox" type="checkbox" name="elements-selected" var_type="{% if variable.is_numeric %}N{% else %}C{% endif %}" value="{% if variable.shared_map_id %}{{ variable.shared_map_id }}{% else %}USER:{{ project.id }}:{{ variable.id }}{% endif %}" data-text-label="{{ project.name }}: {{ variable.feature_name|get_readable_name }}" data-feature-id="{{ variable.id }}" > {{ variable.feature_name|get_readable_name }}
                                                                                             </label>
                                                                                         </li>
                                                                                     {% endif %}
@@ -226,7 +226,7 @@
                                                     <li class="checkbox">
                                                         <div id="heading-{{ var.id }}">
                                                             <label>
-                                                                <input class="variable-toggle-checkbox" type="checkbox" value="{{ var.code }}" var_type="{{ var.type }}" data-code="{{ var.code }}" name="elements-selected" data-text-label="{{ var.name }}" {% if var.feature %}data-feature-id="{{ var.feature.id }}"{% endif %}>
+                                                                <input aria-label="{{ var.name }}" class="variable-toggle-checkbox" type="checkbox" value="{{ var.code }}" var_type="{{ var.type }}" data-code="{{ var.code }}" name="elements-selected" data-text-label="{{ var.name }}" {% if var.feature %}data-feature-id="{{ var.feature.id }}"{% endif %}>
                                                                 {{ var.name }}
                                                             </label>
                                                         </div>
