--- a/templates/GenespotRE/register_sa.html
+++ b/templates/GenespotRE/register_sa.html
@@ -56,9 +56,9 @@
                             </div>
                             <div id="datasets-select-div" style="display:none;">
                                 Which dataset(s) would you like to use?
-                                <ul class="form-control">
+                                <ul class="dataset-list">
                                     {% for dataset in authorized_datasets %}
-                                        <li><label>
+                                        <li class="checkbox"><label>
                                             <input type="checkbox" name="datasets" value="{{ dataset.id }}">{{ dataset.name }}
                                         </label></li>
                                     {% endfor %}
