- Small CSS visual fix

--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -67,10 +67,9 @@
   span
     font-weight: 600
 
-.dataset-list
-  ul
-    list-style: none
-    padding: 0px
+ul.dataset-list
+  list-style: none
+  padding: 0px
 
 .datasets-select-div
   margin-top: 10px
