-> Error checking in demos/views -> Move CSS to more appropriate location

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -112,6 +112,9 @@
             margin: 5px 0px
             img
                 display: block
+        &.dataset-list
+            list-style: none
+            padding: 0px
 
     i.fa-check
         color: $isb-success
