--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -6,15 +6,14 @@
     {% if not user_details.NIH_username or not user_details.NIH_active %} {# No eRA account, no dbGaP #}
 
         {% if not user_details.NIH_username %}
-            <p>
-            Apply for dbGaP Authorized Access to access underlying Level 1 genomics data.
-            </p>
-            <a href="{% url 'demo:saml_index' %}?sso">Associate with eRA Commons Account</a>
+            <p>Apply for dbGaP Authorized Access to access underlying Level 1 genomics data.</p>
+            <p><a href="{% url 'demo:saml_index' %}?sso">Associate with eRA Commons Account</a></p>
         {% else %}
-            <a href="{% url 'demo:saml_index' %}?sso">Log in with your NIH identity: {{ user_details.NIH_username }}</a>
-            <a href="{% url 'unlink_accounts' %}">Unlink {{ user_details.email }} from the NIH identity: {{ user_details.NIH_username }}</a>
+            <p><a href="{% url 'demo:saml_index' %}?sso">Log in with your NIH identity: {{ user_details.NIH_username }}</a></p>
+            <hr>
+            <p><a href="{% url 'unlink_accounts' %}">Unlink {{ user_details.email }} from the NIH identity: {{ user_details.NIH_username }}</a></p>
         {% endif %}
-        <a href="https://dbgap.ncbi.nlm.nih.gov/aa/wga.cgi?page=login" target="_blank">Learn More</a>
+        <p><a href="https://dbgap.ncbi.nlm.nih.gov/aa/wga.cgi?page=login" target="_blank">Learn More</a></p>
 
     {% elif not user_details.dbGaP_authorized %} {# no dbGaP #}
 
